namespace lab22.Shapes
{
    // Інтерфейс для LSP-сумісної альтернативи
    public interface IShape
    {
        int Area();
    }
}
